# genai-factory

./: .gitignore  .tflint.hcl  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/gen-test-report/: action.yml
.github/actions/tests-setup/: action.yml
.github/workflows/: linting.yml  tests-integration.yml  tests.yml
ai-apps-conversational/: README.md
ai-apps-conversational/0-projects/: README.md  outputs.tf  terraform.tfvars.sample  variables.tf
ai-apps-conversational/0-projects/data/: project.yaml
ai-apps-conversational/0-projects/templates/: terraform.auto.tfvars.tpl
ai-apps-conversational/1-apps/: README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
ai-apps-conversational/1-apps/data/: ds-kb-schema.json
ai-apps-conversational/1-apps/data/agents/default/: agent.json
ai-apps-conversational/1-apps/data/agents/default/flows/Default Start Flow/: Default Start Flow.json
ai-apps-conversational/1-apps/data/agents/default/flows/Set Current Date/: Set Current Date.json
ai-apps-conversational/1-apps/data/agents/default/intents/Default Welcome Intent/trainingPhrases/: en-us.json  en.json
ai-apps-conversational/1-apps/data/agents/default/playbooks/Default Generative Playbook/: Default Generative Playbook.json
ai-apps-conversational/1-apps/data/agents/default/tools/knowledge-base-and-faq/: knowledge-base-and-faq.json
ai-apps-conversational/1-apps/data/ds-faq/: faq.csv
ai-apps-conversational/1-apps/data/ds-kb/: rates-and-plans.md  roaming.md  useful-links.md  voice-troubleshooting.md
ai-apps-conversational/1-apps/tools/: agentutil.py
ai-apps-search/: README.md
ai-apps-search/0-projects/: README.md  main.tf  outputs.tf
ai-apps-search/0-projects/data/: project.yaml
ai-apps-search/1-apps/: README.md  main.tf  outputs.tf  variables.tf
cloud-run-gpu/: README.md
cloud-run-gpu/0-projects/: README.md  variables.tf
cloud-run-gpu/0-projects/data/: project.yaml
cloud-run-gpu/0-projects/templates/: terraform.auto.tfvars.tpl
cloud-run-gpu/1-apps/: README.md  lb-ext.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-rag/: .terraform.lock.hcl  README.md  database.tf  db.tf  frontend.tf  ingestion.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-rag-search/: README.md
cloud-run-rag-search/0-projects/: README.md  outputs.tf  terraform.tfvars.sample  variables.tf
cloud-run-rag-search/0-projects/data/: project.yaml
cloud-run-rag-search/0-projects/templates/: providers.tf.tpl
cloud-run-rag-search/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  network.tf  outputs.tf  variables.tf
cloud-run-rag-search/1-apps/apps/rag/ingestion/: README.md  main.py  pyproject.toml
cloud-run-rag-search/1-apps/apps/rag/ingestion/src/: config.py  storage.py  vector_search.py
cloud-run-rag-search/1-apps/data/: data.jsonl
cloud-run-rag/0-projects/: README.md  main.tf  outputs.tf  variables.tf
cloud-run-rag/0-projects/data/: project.yaml
cloud-run-rag/0-projects/templates/: providers.tf.tpl  terraform.auto.tfvars.tpl
cloud-run-rag/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  network.tf  outputs.tf  terraform.tfvars.sample  variables.tf
cloud-run-rag/1-apps/apps/rag/ingestion/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
cloud-run-rag/1-apps/apps/rag/ingestion/src/: config.py  db.py
cloud-run-rag/1-apps/data/: dns-policy-rules.yaml
cloud-run-rag/apps/chat/: Dockerfile  main.py  requirements.txt
cloud-run-rag/projects/: project.yaml
cloud-run-single/: .terraform.lock.hcl  README.md  main.tf  network.tf  outputs.tf  terraform.tfvars.sample  variables.tf
cloud-run-single/0-projects/: README.md  main.tf  outputs.tf  variables.tf
cloud-run-single/0-projects/data/: project.yaml
cloud-run-single/0-projects/templates/: providers.tf.tpl  terraform.auto.tfvars.tpl
cloud-run-single/1-apps/: README.md  diagram.excalidraw  lb-ext.tf  lb-int-cert.tf  lb-int.tf  main.tf  network.tf  outputs.tf  terraform.tfvars.sample  terraform.tfvars.sample-gpu  variables.tf
cloud-run-single/1-apps/apps/chat/: README.md  main.py  pyproject.toml  requirements.txt
cloud-run-single/1-apps/apps/chat/src/: config.py
cloud-run-single/apps/chat/: Dockerfile  README.md  app.py  main.py  requirements.txt
cloud-run-single/projects/: project.yaml
tests/: collectors.py  conftest.py  fixtures.py
tests/ai_apps_conversational/0_projects/: simple.tfvars  simple.yaml  tftest.yaml
tests/ai_apps_conversational/1_apps/: simple.tfvars  simple.yaml  tftest.yaml
tests/ai_apps_search/0_projects/: simple.yaml  tftest.yaml
tests/ai_apps_search/1_apps/: simple.tfvars  simple.yaml  tftest.yaml
tests/cloud-run-single/0-projects/: tftest.yaml
tests/cloud_run_gpu/0_projects/: simple.yaml  tftest.yaml
tests/cloud_run_gpu/1_apps/: simple.tfvars  simple.yaml  tftest.yaml
tests/cloud_run_rag/0_projects/: simple.yaml  (+1 more)
tests/examples/: conftest.py  test_plan.py  utils.py  variables.tf
tools/: check_boilerplate.py  check_documentation.py  check_links.py  fetch_latest_tag.py  linting.yml  plan_summary.py  requirements.txt  tfdoc.py  update_fabric_ref.py
tools/lockfile/: default-versions_override.tf  main.tf  versions.tf  versions.tofu
(+39 files in other folders)
