[project]
name = "genai-factory"
version = "0.1.0"
description = "GenAI factory project for development test and tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beautifulsoup4>=4.13.4", "click>=8.2.1"]


[dependency-groups]
test = [
    "deepdiff>=8.5.0",
    "jsonschema>=4.24.0",
    "marko>=2.1.3",
    "pytest>=8.4.0",
    "pytest-xdist>=3.7.0",
    "python-hcl2>=7.2.1",
    "pyyaml>=6.0.2",
    "tftest>=1.8.5",
]
tools = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "deepdiff>=8.5.0",
    "ghapi>=1.0.6",
    "iso8601>=2.1.0",
    "jsonschema>=4.24.0",
    "marko>=2.1.3",
    "requests>=2.32.4",
    "yamale>=6.0.0",
    "yapf>=0.43.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short --dist loadgroup"


[tool.yapfignore]
ignore_patterns = ["**/.terraform/", "tools/", "tests/", ".venv/"]
